tests/baselines/reference/narrowByClauseExpressionInSwitchTrue6.errors.txt
narrowByClauseExpressionInSwitchTrue6.ts(22,19): error TS2322: Type 'MyType' is not assignable to type 'never'.
  Type 'A' is not assignable to type 'never'.
narrowByClauseExpressionInSwitchTrue6.ts(24,15): error TS2339: Property 'aProps' does not exist on type 'MyType'.
  Property 'aProps' does not exist on type 'B'.
narrowByClauseExpressionInSwitchTrue6.ts(36,19): error TS2322: Type 'MyType' is not assignable to type 'never'.
  Type 'A' is not assignable to type 'never'.
narrowByClauseExpressionInSwitchTrue6.ts(38,15): error TS2339: Property 'aProps' does not exist on type 'MyType'.
  Property 'aProps' does not exist on type 'B'.
narrowByClauseExpressionInSwitchTrue6.ts(53,15): error TS2339: Property 'aProps' does not exist on type 'MyType'.
  Property 'aProps' does not exist on type 'B'.
narrowByClauseExpressionInSwitchTrue6.ts(65,19): error TS2322: Type 'MyType' is not assignable to type 'never'.
  Type 'A' is not assignable to type 'never'.
narrowByClauseExpressionInSwitchTrue6.ts(67,15): error TS2339: Property 'aProps' does not exist on type 'MyType'.
  Property 'aProps' does not exist on type 'B'.
narrowByClauseExpressionInSwitchTrue6.ts(70,15): error TS2339: Property 'bProps' does not exist on type 'MyType'.
  Property 'bProps' does not exist on type 'A'.
narrowByClauseExpressionInSwitchTrue6.ts(73,15): error TS2339: Property 'cProps' does not exist on type 'MyType'.
  Property 'cProps' does not exist on type 'A'.


==== narrowByClauseExpressionInSwitchTrue6.ts (9 errors) ====
    interface A {
        kind: "a";
        aProps: string;
    }
    
    interface B {
        kind: "b";
        bProps: string;
    }
    
    interface C {
        kind: "c";
        cProps: string;
    }
    
    
    type MyType = A | B | C;
    
    function isA(x: MyType) {
        switch (true) {
            default:
                const never: never = x;
                      ~~~~~
!!! error TS2322: Type 'MyType' is not assignable to type 'never'.
!!! error TS2322:   Type 'A' is not assignable to type 'never'.
            case x.kind === "a":
                x.aProps;
                  ~~~~~~
!!! error TS2339: Property 'aProps' does not exist on type 'MyType'.
!!! error TS2339:   Property 'aProps' does not exist on type 'B'.
                break;
            case x.kind === "b":
                x.bProps;
                break;
            case x.kind === "c":
                x.cProps;
                break;
        }
    
        switch (true) {
            default:
                const never: never = x;
                      ~~~~~
!!! error TS2322: Type 'MyType' is not assignable to type 'never'.
!!! error TS2322:   Type 'A' is not assignable to type 'never'.
            case x.kind === "a": {
                x.aProps;
                  ~~~~~~
!!! error TS2339: Property 'aProps' does not exist on type 'MyType'.
!!! error TS2339:   Property 'aProps' does not exist on type 'B'.
                break;
            }
            case x.kind === "b": {
                x.bProps;
                break;
            }
            case x.kind === "c": {
                x.cProps;
                break;
            }
        }
        
        switch (true) {
            default:
                x.aProps;
                  ~~~~~~
!!! error TS2339: Property 'aProps' does not exist on type 'MyType'.
!!! error TS2339:   Property 'aProps' does not exist on type 'B'.
                break;
            case x.kind === "b":
                x.bProps;
                break;
            case x.kind === "c":
                x.cProps;
                break;
        }
    
        switch (true) {
            default:
                const never: never = x;
                      ~~~~~
!!! error TS2322: Type 'MyType' is not assignable to type 'never'.
!!! error TS2322:   Type 'A' is not assignable to type 'never'.
            case x.kind === "a":
                x.aProps;
                  ~~~~~~
!!! error TS2339: Property 'aProps' does not exist on type 'MyType'.
!!! error TS2339:   Property 'aProps' does not exist on type 'B'.
                // fallthrough
            case x.kind === "b":
                x.bProps;
                  ~~~~~~
!!! error TS2339: Property 'bProps' does not exist on type 'MyType'.
!!! error TS2339:   Property 'bProps' does not exist on type 'A'.
                // fallthrough
            case x.kind === "c":
                x.cProps;
                  ~~~~~~
!!! error TS2339: Property 'cProps' does not exist on type 'MyType'.
!!! error TS2339:   Property 'cProps' does not exist on type 'A'.
        }
    }
    